# radkit

./: Cargo.toml  README.md
a2a-client/: Cargo.toml  README.md
a2a-client/src/: client.rs
docs/src/content/docs/: getting-started.md
docs/src/content/docs/a2a/: a2a-compliance.md  composing-agents.md  multi-turn-conversations.md  progress-updates.md  skills.md
docs/src/content/docs/architecture/: runtime.md
examples/: README.md  gemini_computer_use.rs
examples/agentskill_agent/: agent.rs
examples/agentskill_agent/skills/text-summariser/: SKILL.md
examples/agentskill_agent/skills/translate/: SKILL.md
examples/hr_agent/: agent.rs
examples/hr_agent/hr_agent_skills/: create_it_accounts.rs  generate_onboarding_plan.rs  summarize_resume.rs
radkit/: Cargo.toml
radkit-macros/: Cargo.toml  README.md
radkit-macros/src/: agentskill.rs  lib.rs  skill.rs
radkit-macros/tests/: skill_tests.rs  tool_tests.rs
radkit/src/: errors.rs  lib.rs
radkit/src/agent/: agentskill.rs  builder.rs  llm_skill.rs  llm_worker.rs  mod.rs  skill.rs
radkit/src/models/: base_llm.rs
radkit/src/models/providers/: gemini_llm.rs  mod.rs
radkit/src/runtime/: banner.rs  context.rs  mod.rs  web.rs
radkit/src/runtime/core/: error_mapper.rs  executor.rs
radkit/src/runtime/core/negotiator/: default.rs
radkit/src/runtime/memory/: embedder.rs  extensions.rs  facades.rs  mod.rs  types.rs
radkit/src/runtime/memory/backends/: in_memory.rs  mod.rs
radkit/src/runtime/task_manager/: default.rs  in_memory.rs  mod.rs  sqlite.rs
radkit/src/tools/: mod.rs  tool.rs
radkit/src/tools/memory/: load_memory.rs  mod.rs  save_memory.rs  search_knowledge.rs
radkit/tests/: executor_integration.rs  memory_service_e2e.rs  runtime_test.rs  skill_execution.rs  tool_macro_e2e.rs
radkit/ui/: README.md  package-lock.json  package.json
radkit/ui/src/api/: client.ts
radkit/ui/src/components/: ArtifactPreview.tsx  Console.tsx
radkit/ui/src/routes/: agent-detail.tsx
radkit/ui/src/types/: AgentInfo.ts  a2a_v1.ts
