[workspace]
members = ["a2a-types", "a2a-client", "radkit", "radkit-macros"]
resolver = "2"

[workspace.dependencies]
tryparse = { version = "0.4.4", default-features = false, features = ["derive"] }
tryparse-derive = "0.4.4"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
