[package]
name = "radkit"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "Rust AI Agent Development Kit"
repository = "https://github.com/agents-sh/radkit"
homepage = "https://radkit.rs"
documentation = "https://radkit.rs"
keywords = ["ai", "agent", "ai-agent", "a2a", "agent-sdk"]
readme = "../README.md"
# Only include necessary files in published crate
include = [
    "src/**/*.rs",      # Only Rust source files
    "tests/**/*.rs",    # Only test files
    "ui/dist/**/*",     # Only built UI files
    "Cargo.toml",
    "LICENSE",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["macros"]
# Enables the runtime handle and a full native agent server environment
runtime = ["dep:axum", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber"]
# Enables a native SQLite-backed TaskStore for persistent task, event, and state storage
task-store-sqlite = ["dep:sqlx"]
# Enables developer UI with TypeScript type generation
dev-ui = ["runtime", "dep:ts-rs"]
# Enables OpenAPI toolset for connecting to REST APIs
openapi = ["dep:openapiv3", "dep:serde_yaml", "dep:url"]
# Enables MCP (Model Context Protocol) support for connecting to external tool servers
mcp = ["dep:rmcp", "dep:tracing"]
# Enables test utilities (FakeLlm, RecordingTool) for downstream testing
test-support = []
macros = ["dep:radkit-macros", "dep:tryparse-derive", "agentskill"]
# Enables AgentSkill support (SKILL.md loading).
agentskill = ["dep:serde_yaml"]

[dependencies]
a2a-types = { path = "../a2a-types", version = "0.2.0" }
a2a-client = { path = "../a2a-client", version = "0.2.0" }
pbjson-types = "0.9.0"
radkit-macros = { path = "../radkit-macros", version = "0.0.3", optional = true }
tryparse-derive = { workspace = true, optional = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
schemars = "1.0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tryparse = { workspace = true }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
async-stream = "0.3.6"

# Optional OpenAPI dependencies
openapiv3 = { version = "2.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
url = { version = "2.5", optional = true }
# agentskill feature uses serde_yaml for SKILL.md frontmatter parsing

[target.'cfg(not(all(target_os = "wasi", target_env = "p1")))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "process", "macros"] }
rand = "0.9.2"
dashmap = "6"
# Optional dependencies for the full runtime (native-only)
axum = { version = "0.8.0", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
ts-rs = { version = "11.1.0", optional = true }
# Optional MCP support (native-only)
rmcp = { version = "0.6.3", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"], optional = true }

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dependencies]
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Tokio with WASI support (single-threaded runtime)
tokio = { version = "1.47.0", features = ["rt", "sync", "time", "io-util", "macros"] }
# Random number generation for WASI (no special features needed)
getrandom = "0.2"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
http-body-util = "0.1"
dotenvy = "0.15"

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "hr_agent"
path = "../examples/hr_agent/agent.rs"

[[example]]
name = "agentskill_agent"
path = "../examples/agentskill_agent/agent.rs"
required-features = ["agentskill", "dev-ui"]

[[example]]
name = "gemini_computer_use"
path = "../examples/gemini_computer_use.rs"
